--- a/config.json
+++ b/config.json
@@ -1,11 +1,12 @@
 {
   "num_pozioni": "12",
-  "tier": "T3",
-  "calderone": "Diamante",
-  "prezzo_reagente": "2.5",
+  "tier": "T1",
+  "calderone": "Oro",
+  "prezzo_reagente": "1.5",
   "prezzo_core": "1.0",
   "prezzo_carbone": "1.5",
   "verdure_per_1b": "3",
   "vasetti_per_1b": "15",
-  "boccette_per_1b": "14"
+  "boccette_per_1b": "14",
+  "last_profile": "Standard"
 }
