--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "num_pozioni": "12",
-  "tier": "T1",
+  "tier": "T2",
   "calderone": "Oro",
   "prezzo_reagente": "1.5",
   "prezzo_core": "1.0",
@@ -8,5 +8,6 @@
   "verdure_per_1b": "3",
   "vasetti_per_1b": "15",
   "boccette_per_1b": "14",
+  "prezzo_vendita": "2.11",
   "last_profile": "Standard"
 }
